# tfl-lump

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: home.ipynb
examples/: analysis.ipynb  home.ipynb
src/lump/: __init__.py  client.py  stores.py
src/lump/data/: lines-bus.csv  lines-bus.json  lines-bus.pkl  stoppoints.csv  stoppoints.json  stoppoints.pkl
src/lump/models/: line.py  route.py  stoppoint.py
src/lump_cs/: __init__.py
src/tflump/: client.py  config.py  stores.py  tflump.py
src/tflump/data/: stoppoints.pkl  stoppoints.pkl.bak
tests/: store.py  test_store.py
