[project]
name = "lump"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pilchard", email = "187820+pilchard@users.noreply.github.com" },
]
dependencies = [
    "pydantic>=2.8.2",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lump"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]
src = ["src"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D105",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint.pydocstyle]
convention = "numpy"
