[project]
name = "tfl-lump"
description = "TfL API access and analysis in python"
authors = [
    { name = "pilchard", email = "187820+pilchard@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "pydantic>=2.8.2",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.4",
    "ipywidgets>=8.1.3",
]
dynamic = ["version"]

[project.urls]
homepage = "https://pilchard.github.io/tfl-lump/"
documentation = "https://pilchard.github.io/tfl-lump/"
repository = "https://github.com/pilchard/tfl-lump"

[project.optional-dependencies]
dev = ["pytest", "importlib_resources"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "tfl-lump/__init__.py"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.1"]


[tool.hatch.build.targets.wheel]
packages = ["src/lump"]

[tool.ruff]
include = ["pyproject.toml", "tfl-lump/**/*.py", "scripts/**/*.py"]
src = ["tfl-lump"]


[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "numpy"
